@@ -1,3 +1,8 @@
+2009-11-11  Paul Pluzhnikov  <ppluzhnikov@google.com>
+
+	PR gdb/10838
+	* thread-db.c (thread_db_free): Call td_ta_clear_event.
+
 2009-11-03  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* configure.ac (i[34567]86-*): Check if we're targetting x86-64
